--- a/7/my-app/src/objects/App.module.css
+++ b/7/my-app/src/objects/App.module.css
@@ -1,5 +1,12 @@
 .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: solid;
     position: relative;
     overflow: hidden;
+    margin: 0;
+    background-color: rgb(255, 255, 255);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
