--- a/7/my-app/src/tools/Creats.module.css
+++ b/7/my-app/src/tools/Creats.module.css
@@ -1,9 +1,16 @@
 .box{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
+    flex-direction: row;
     position: relative;
     margin: 5px;
     padding: 0px;
+    width: 70%;
 } 
+
+.button{
+    width: 25px;
+    height: 25px;
+}
